# api_auth_v3

./: README.md  docker-compose.yaml  pyproject.toml
src/: .env  .env_example  main.py
src/admin_panel/: __init__.py  auth.py  user.py  utils.py
src/alembic/: env.py
src/alembic/versions/: 2025_05_01_2152-ce482a6c8edb_create_table.py
src/auth/: auth.py  dao.py  models.py  router.py  schemas.py
src/dao/: dao.py
src/database/: __init__.py  base.py
src/settings/: config.py
src/users/: dao.py  models.py  router.py  schemas.py
