[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.9.1"
pydantic = {extras = ["email"], version = "^2.11.4"}
fastapi = "^0.115.12"
uvicorn = "^0.34.2"
sqlalchemy = "^2.0.40"
asyncio = "^3.4.3"
asyncpg = "^0.30.0"
greenlet = "^3.2.1"
alembic = "^1.15.2"
passlib = "^1.7.4"
python-jose = "^3.4.0"
bcrypt = "^4.3.0"
python-multipart = "^0.0.20"
